--- a/IParking/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/IParking/app/src/main/res/layout/fragment_bluetooth.xml
@@ -6,16 +6,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="藍芽裝置"
+        android:text="已綁定的裝置"
         android:id="@+id/textView"
+        android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="#FFCCCCCC" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Paired Devices"
+        android:text="掃描裝置"
         android:id="@+id/Devices_Button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
