上傳忘記的icon

--- a/IParking/app/src/main/res/menu/nav_items.xml
+++ b/IParking/app/src/main/res/menu/nav_items.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_map" android:icon="@android:drawable/ic_menu_gallery"
+        <item android:id="@+id/nav_map" android:icon="@drawable/map"
             android:title="Map" />
-        <item android:id="@+id/nav_bluetooth" android:icon="@android:drawable/ic_menu_slideshow"
+        <item android:id="@+id/nav_bluetooth" android:icon="@drawable/bluetooth"
             android:title="Bluetooth Device" />
         <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
             android:title="Tools" />
