--- a/IParking/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/IParking/app/src/main/res/layout/fragment_bluetooth.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="已綁定的裝置"
         android:id="@+id/textView"
@@ -14,7 +14,33 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="#FFCCCCCC" />
+        android:background="#FFCCCCCC"
+        android:visibility="invisible" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textView" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="未綁定的裝置"
+        android:id="@+id/textView_unBounded"
+        android:gravity="center_horizontal"
+        android:background="#FFCCCCCC"
+        android:layout_below="@+id/listView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView_unBounded"
+        android:layout_below="@+id/textView_unBounded"
+         />
 
     <Button
         android:layout_width="wrap_content"
@@ -26,12 +52,4 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/Devices_Button"
-        android:layout_below="@+id/textView" />
 </RelativeLayout>
