--- a/IParking/app/src/main/res/layout/nav_header.xml
+++ b/IParking/app/src/main/res/layout/nav_header.xml
@@ -7,14 +7,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
-    android:gravity="bottom">
+    android:gravity="bottom"
+    android:weightSum="1">
 
-    <ImageView android:layout_width="64dp" android:layout_height="64dp"
+    <ImageView android:layout_width="wrap_content" android:layout_height="64dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/hourse" android:id="@+id/imageView" />
+        android:src="@drawable/hourse" android:id="@+id/imageView"
+        android:layout_weight="0.5" />
 
-    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing" android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="歡迎使用"
+        android:id="@+id/textView_navHeader" />
 
 </LinearLayout>
