--- a/IParking/app/src/main/res/layout/fragment_bluetooth.xml
+++ b/IParking/app/src/main/res/layout/fragment_bluetooth.xml
@@ -42,11 +42,12 @@
         android:layout_below="@+id/textView_unBounded"
          />
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="掃描裝置"
         android:id="@+id/Devices_Button"
+        android:src="@drawable/bluetooth_scan"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
